<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/authlogo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/desc3"
        android:textColor="#AEAEAE"
        android:textStyle="italic" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginVertical="2sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFFFFF" />

    <EditText
        android:id="@+id/RegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/RegUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp" />

    <EditText
        android:id="@+id/RegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button
        android:id="@+id/registerbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#311B92"
        android:text="@string/register" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/RegtoHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/gotohome"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/RegtoLog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/gotologin"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>