<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/authlogo"
        android:src="@drawable/authlogo"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="#FFFFFF"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/desc"
        android:textColor="#AEAEAE"
        android:textStyle="italic" />

    <Button
        android:id="@+id/mainlogin"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#311B92"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/mainsignup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="#FFFFFF"
        android:text="@string/signup"
        android:textColor="#311B92"
        app:rippleColor="#311B92" />
</LinearLayout>