<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgcolor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/authlogo" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/desc2"
        android:textColor="#AEAEAE"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="#FFFFFF" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/raleway_light"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/loginbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:backgroundTint="#311B92"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/LogtoHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/gotohome"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/LogtoReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/gotoregister"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>